[package]
name = "mongodb-store"
version = "0.0.1"
authors = ["Godstime Israel <godstimeisrael66@gmail.com>"]
edition = "2018"
description = "A Mongodb store implementation for cqrs-eventsourcing"

readme = "README.md"
documentation = "https://github.com/GTime/mongdb-store/README.md"
homepage = "https://github.com/GTime/mongdb-store/README.md"
repository = "https://github.com/GTime/mongdb-store"

license-file = "LICENSE"

keywords = ["cqrs", "mongodb", "store", "eventsourcing", "cqrs-eventsourcing"]
categories = ["web-programming", "database"]
exclude = ["build/**/*.o", "doc/**/*.html", "/example", "/test", "*.bk", "/.vscode" ]


[dependencies]
cqrs-eventsourcing = "0.1.1"
serde = { version = "1.0.104", features = ["derive"]}
serde_json = "1.0"
async-trait = "0.1.42"
futures = "0.3"
mongodb = "1.1.1"


[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
